sys/prebuilt-bindings/geos_3.11.rs

/* automatically generated by rust-bindgen 0.60.1 */

pub const GEOS_VERSION_MAJOR: u32 = 3;
pub const GEOS_VERSION_MINOR: u32 = 11;
pub const GEOS_VERSION: &[u8; 12usize] = b"3.11.0beta2\0";
pub const GEOS_JTS_PORT: &[u8; 7usize] = b"1.18.0\0";
pub const GEOS_CAPI_VERSION_MAJOR: u32 = 1;
pub const GEOS_CAPI_VERSION_MINOR: u32 = 16;
pub const GEOS_CAPI_VERSION_PATCH: u32 = 0;
pub const GEOS_CAPI_VERSION: &[u8; 24usize] = b"3.11.0beta2-CAPI-1.16.0\0";
pub const GEOS_CAPI_FIRST_INTERFACE: u32 = 1;
pub const GEOS_CAPI_LAST_INTERFACE: u32 = 17;
pub type wchar_t = libc::c_int;
pub type max_align_t = u128;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSContextHandle_HS {
    _unused: [u8; 0],
}
#[doc = " Type returned by GEOS_init_r(), for use in multi-threaded"]
#[doc = " applications."]
#[doc = ""]
#[doc = " There should be only one GEOSContextHandle_t per thread."]
pub type GEOSContextHandle_t = *mut GEOSContextHandle_HS;
#[doc = " Callback function for passing GEOS error messages to parent process."]
#[doc = ""]
#[doc = " Set the GEOSMessageHandler for error and notice messages in \\ref initGEOS"]
#[doc = " for single-threaded programs, or using \\ref initGEOS_r for threaded"]
#[doc = " programs"]
#[doc = ""]
#[doc = " \\param fmt the message format template"]
pub type GEOSMessageHandler =
    ::std::option::Option<unsafe extern "C" fn(fmt: *const libc::c_char, ...)>;
#[doc = " A GEOS message handler function."]
#[doc = ""]
#[doc = " \\param message the message contents"]
#[doc = " \\param userdata the user data pointer that was passed to GEOS when"]
#[doc = " registering this message handler."]
#[doc = ""]
#[doc = " \\see GEOSContext_setErrorMessageHandler"]
#[doc = " \\see GEOSContext_setNoticeMessageHandler"]
pub type GEOSMessageHandler_r = ::std::option::Option<
    unsafe extern "C" fn(message: *const libc::c_char, userdata: *mut libc::c_void),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSGeom_t {
    _unused: [u8; 0],
}
#[doc = " Geometry generic type. Geometry can be a point, linestring, polygon,"]
#[doc = " multipoint, multilinestring, multipolygon, or geometrycollection."]
#[doc = " Geometry type can be read with \\ref GEOSGeomTypeId. Most functions"]
#[doc = " in GEOS either have GEOSGeometry* as a parameter or a return type."]
#[doc = " \\see GEOSGeom_createPoint"]
#[doc = " \\see GEOSGeom_createLineString"]
#[doc = " \\see GEOSGeom_createPolygon"]
#[doc = " \\see GEOSGeom_createCollection"]
#[doc = " \\see GEOSGeom_destroy"]
pub type GEOSGeometry = GEOSGeom_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSPrepGeom_t {
    _unused: [u8; 0],
}
#[doc = " Prepared geometry type."]
#[doc = " \\see GEOSPrepare()"]
#[doc = " \\see GEOSPreparedGeom_destroy()"]
pub type GEOSPreparedGeometry = GEOSPrepGeom_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSCoordSeq_t {
    _unused: [u8; 0],
}
#[doc = " Coordinate sequence."]
#[doc = " \\see GEOSCoordSeq_create()"]
#[doc = " \\see GEOSCoordSeq_destroy()"]
pub type GEOSCoordSequence = GEOSCoordSeq_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSSTRtree_t {
    _unused: [u8; 0],
}
#[doc = " STRTree index."]
#[doc = " \\see GEOSSTRtree_create()"]
#[doc = " \\see GEOSSTRtree_destroy()"]
pub type GEOSSTRtree = GEOSSTRtree_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSBufParams_t {
    _unused: [u8; 0],
}
#[doc = " Parameter object for buffering."]
#[doc = " \\see GEOSBufferParams_create()"]
#[doc = " \\see GEOSBufferParams_destroy()"]
pub type GEOSBufferParams = GEOSBufParams_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSMakeValidParams_t {
    _unused: [u8; 0],
}
#[doc = " Parameter object for validity enforcement."]
#[doc = " \\see GEOSMakeValidParams_create()"]
#[doc = " \\see GEOSMakeValidParams_destroy()"]
pub type GEOSMakeValidParams = GEOSMakeValidParams_t;
#[doc = " \\cond"]
pub type GEOSGeom = *mut GEOSGeometry;
pub type GEOSCoordSeq = *mut GEOSCoordSequence;
#[doc = " Point"]
pub const GEOSGeomTypes_GEOS_POINT: GEOSGeomTypes = 0;
#[doc = " Linestring"]
pub const GEOSGeomTypes_GEOS_LINESTRING: GEOSGeomTypes = 1;
#[doc = " Linear ring, used within polygons"]
pub const GEOSGeomTypes_GEOS_LINEARRING: GEOSGeomTypes = 2;
#[doc = " Polygon"]
pub const GEOSGeomTypes_GEOS_POLYGON: GEOSGeomTypes = 3;
#[doc = " Multipoint, a homogeneous collection of points"]
pub const GEOSGeomTypes_GEOS_MULTIPOINT: GEOSGeomTypes = 4;
#[doc = " Multilinestring, a homogeneous collection of linestrings"]
pub const GEOSGeomTypes_GEOS_MULTILINESTRING: GEOSGeomTypes = 5;
#[doc = " Multipolygon, a homogeneous collection of polygons"]
pub const GEOSGeomTypes_GEOS_MULTIPOLYGON: GEOSGeomTypes = 6;
#[doc = " Geometry collection, a heterogeneous collection of geometry"]
pub const GEOSGeomTypes_GEOS_GEOMETRYCOLLECTION: GEOSGeomTypes = 7;
#[doc = " Geometry type number, used by functions returning or"]
#[doc = " consuming geometry types."]
#[doc = ""]
#[doc = " \\see GEOSGeomType"]
#[doc = " \\see GEOSGeomTypeId"]
pub type GEOSGeomTypes = libc::c_uint;
#[doc = " Big Endian"]
pub const GEOSWKBByteOrders_GEOS_WKB_XDR: GEOSWKBByteOrders = 0;
#[doc = " Little Endian"]
pub const GEOSWKBByteOrders_GEOS_WKB_NDR: GEOSWKBByteOrders = 1;
#[doc = " Well-known binary byte orders used when"]
#[doc = " writing to WKB."]
#[doc = ""]
#[doc = " \\see GEOSWKBWriter_setByteOrder"]
pub type GEOSWKBByteOrders = libc::c_uint;
#[doc = " Extended"]
pub const GEOSWKBFlavors_GEOS_WKB_EXTENDED: GEOSWKBFlavors = 1;
#[doc = " ISO"]
pub const GEOSWKBFlavors_GEOS_WKB_ISO: GEOSWKBFlavors = 2;
#[doc = " Well-known binary flavors to use"]
#[doc = " when writing to WKB. ISO flavour is"]
#[doc = " more standard. Extended flavour supports"]
#[doc = " 3D and SRID embedding. GEOS reads both"]
#[doc = " transparently."]
#[doc = ""]
#[doc = " \\see GEOSWKBWriter_setFlavor"]
pub type GEOSWKBFlavors = libc::c_uint;
#[doc = " Callback function for use in spatial index search calls. Pass into"]
#[doc = " the query function and handle query results as the index"]
#[doc = " returns them."]
#[doc = ""]
#[doc = " \\see GEOSSTRtree_query"]
pub type GEOSQueryCallback = ::std::option::Option<
    unsafe extern "C" fn(item: *mut libc::c_void, userdata: *mut libc::c_void),
>;
#[doc = " Callback function for use in spatial index nearest neighbor calculations."]
#[doc = " Allows custom distance to be calculated between items in the"]
#[doc = " index. Is passed two items, and sets the calculated distance"]
#[doc = " between the items into the distance pointer. Extra data for the"]
#[doc = " calculation can be passed via the userdata."]
#[doc = ""]
#[doc = " \\param item1 first of the pair of items to calculate distance between"]
#[doc = " \\param item2 second of the pair of items to calculate distance between"]
#[doc = " \\param distance the distance between the items here"]
#[doc = " \\param userdata extra data for the calculation"]
#[doc = ""]
#[doc = " \\return zero if distance calculation succeeded, non-zero otherwise"]
#[doc = ""]
#[doc = " \\see GEOSSTRtree_nearest_generic"]
#[doc = " \\see GEOSSTRtree_iterate"]
pub type GEOSDistanceCallback = ::std::option::Option<
    unsafe extern "C" fn(
        item1: *const libc::c_void,
        item2: *const libc::c_void,
        distance: *mut f64,
        userdata: *mut libc::c_void,
    ) -> libc::c_int,
>;
#[doc = " Callback function for use in GEOSGeom_transformXY."]
#[doc = " Allows custom function to be applied to x and y values for each coordinate"]
#[doc = " in a geometry.  Z values are unchanged by this function."]
#[doc = " Extra data for the calculation can be passed via the userdata."]
#[doc = ""]
#[doc = " \\param x coordinate value to be updated"]
#[doc = " \\param y coordinate value to be updated"]
#[doc = " \\param userdata extra data for the calculation"]
#[doc = ""]
#[doc = " \\return 1 if calculation succeeded, 0 on failure"]
pub type GEOSTransformXYCallback = ::std::option::Option<
    unsafe extern "C" fn(x: *mut f64, y: *mut f64, userdata: *mut libc::c_void) -> libc::c_int,
>;
#[doc = " Callback function for use in interruption. The callback will be invoked _before_ checking for"]
#[doc = " interruption, so can be used to request it."]
#[doc = ""]
#[doc = " \\see GEOS_interruptRegisterCallback"]
#[doc = " \\see GEOS_interruptRequest"]
#[doc = " \\see GEOS_interruptCancel"]
pub type GEOSInterruptCallback = ::std::option::Option<unsafe extern "C" fn()>;
extern "C" {
    #[doc = " Register a function to be called when processing is interrupted."]
    #[doc = " \\param cb Callback function to invoke"]
    #[doc = " \\return the previously configured callback"]
    #[doc = " \\see GEOSInterruptCallback"]
    pub fn GEOS_interruptRegisterCallback(cb: GEOSInterruptCallback) -> GEOSInterruptCallback;
}
extern "C" {
    #[doc = " Request safe interruption of operations"]
    pub fn GEOS_interruptRequest();
}
extern "C" {
    #[doc = " Cancel a pending interruption request"]
    pub fn GEOS_interruptCancel();
}
extern "C" {
    #[doc = " Initialize a context for this thread. Pass this context into"]
    #[doc = " your other calls of `*_r` functions."]
    #[doc = " \\return a GEOS context for this thread"]
    pub fn GEOS_init_r() -> GEOSContextHandle_t;
}
extern "C" {
    #[doc = " Free the memory associated with a \\ref GEOSContextHandle_t"]
    #[doc = " when you are finished calling GEOS functions."]
    #[doc = " \\param handle to be freed"]
    pub fn GEOS_finish_r(handle: GEOSContextHandle_t);
}
extern "C" {
    #[doc = " Set the notice handler callback function for run-time notice messages."]
    #[doc = " \\param extHandle the context returned by \\ref GEOS_init_r."]
    #[doc = " \\param nf the handler callback"]
    #[doc = " \\return the previously configured message handler or NULL if no message handler was configured"]
    pub fn GEOSContext_setNoticeHandler_r(
        extHandle: GEOSContextHandle_t,
        nf: GEOSMessageHandler,
    ) -> GEOSMessageHandler;
}
extern "C" {
    #[doc = " Set the notice handler callback function for run-time error messages."]
    #[doc = " \\param extHandle the GEOS context from \\ref GEOS_init_r"]
    #[doc = " \\param ef the handler callback"]
    #[doc = " \\return the previously configured message handler or NULL if no message handler was configured"]
    pub fn GEOSContext_setErrorHandler_r(
        extHandle: GEOSContextHandle_t,
        ef: GEOSMessageHandler,
    ) -> GEOSMessageHandler;
}
extern "C" {
    #[doc = " Sets a notice message handler on the given GEOS context."]
    #[doc = " \\param extHandle the GEOS context from \\ref GEOS_init_r"]
    #[doc = " \\param nf the message handler"]
    #[doc = " \\param userData optional user data pointer that will be passed to the message handler"]
    #[doc = " \\return the previously configured message handler or NULL if no message handler was configured"]
    pub fn GEOSContext_setNoticeMessageHandler_r(
        extHandle: GEOSContextHandle_t,
        nf: GEOSMessageHandler_r,
        userData: *mut libc::c_void,
    ) -> GEOSMessageHandler_r;
}
extern "C" {
    #[doc = " Sets an error message handler on the given GEOS context."]
    #[doc = ""]
    #[doc = " \\param extHandle the GEOS context"]
    #[doc = " \\param ef the message handler"]
    #[doc = " \\param userData optional user data pointer that will be passed to the message handler"]
    #[doc = ""]
    #[doc = " \\return the previously configured message handler or NULL if no message handler was configured"]
    pub fn GEOSContext_setErrorMessageHandler_r(
        extHandle: GEOSContextHandle_t,
        ef: GEOSMessageHandler_r,
        userData: *mut libc::c_void,
    ) -> GEOSMessageHandler_r;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_create"]
    pub fn GEOSCoordSeq_create_r(
        handle: GEOSContextHandle_t,
        size: libc::c_uint,
        dims: libc::c_uint,
    ) -> *mut GEOSCoordSequence;
}
